--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension Path::Class::Versioned
 
-0.01
+0.01 Wed. May 14, 2008
     - putting ointment on an itch that keeps 
       flaring up from time to time, instead 
       of just scratching it all the time.
