fixing for the new moose

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Path::Class::Versioned
 
+0.03 Wed. Aug. 11, 2010
+    - s/Regexp/RegexpRef/ so that it works with newer Moose
+
 0.02 Mon. Oct. 5, 2009
     - fixing issue with old MooseX::Params::Validate
         - adding plans to the tests
