--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Path::Class::Versioned version 0.02
+Path::Class::Versioned version 0.03
 ===========================
 
 See the individual module documentation for more information
@@ -25,7 +25,7 @@ This module requires these other modules and libraries:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2008 Infinity Interactive, Inc.
+Copyright (C) 2008-2010 Infinity Interactive, Inc.
 
 http://www.iinteractive.com
 
